--- a/chapter_inference.tex
+++ b/chapter_inference.tex
@@ -2,11 +2,23 @@
 
 \chapter{Inferential statistics}
 
-\begin{itemize}
-    \item inference vs. decision-making under uncertainty
-    \item wilk's theorem
-    \item Kolmogorov-Smirnov test
-\end{itemize}
+\section{The philosophy of statistical inference}
+
+- inference vs. decision-making under uncertainty
+- the p-value debate
+- note that the math is still the same as before, we still thinking about properties of estimators
+- inference as one of the most widely-spread notions in science
+
+\section{Parametric inference}
+
+- z-test
+- t-test
+- Wilk's theorem? and likelihood-ratio tests
+- F-tests in general, variance. Then go to ANOVA
+
+\section{Non-parametric inference}
+
+- Kolmogorov-Smirnov
 
 \section{$t$-test}
 
